Fix Spacing Issues on Home Page #1390

--- a/stylesss.css
+++ b/stylesss.css
@@ -49,6 +49,7 @@
         align-items: center;
         justify-content: center;
         padding: 6px 12px;
+        margin-top: 20px;
         background-color: #91be55;
         color: white;
         text-transform: uppercase;
